sumo/tests/traci/VariableRetrieval/Junction/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 169: Unsupported variable specified
